force-app/main/default/objects/MessagingSession/fields/ExternalTicketId__c.field-meta.xml
<CustomField>
    <fullName>ExternalTicketId__c</fullName>
    <description>Grabs the external ticket number or id from the external chat</description>
    <externalId>true</externalId>
    <label>External Ticket ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>