force-app/main/default/objects/MessagingSession/fields/isExternalInteraction__c.field-meta.xml
<CustomField>
    <fullName>isExternalInteraction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show if the external is coming from external</description>
    <label>External Interaction</label>
    <type>Checkbox</type>
</CustomField>