force-app/main/default/objects/MessagingSession/fields/UserIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UserIdentifier__c</fullName>
    <description>Used to identify a user</description>
    <label>User Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>