force-app/main/default/objects/MessagingSession/listViews/FallbackQueue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>FallbackQueue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Fallback Queue</label>
    <queue>FallbackQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>