force-app/main/default/objects/MessagingSession/listViews/MIAWQueue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>MIAWQueue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>MIAW Queue</label>
    <queue>MIAWQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>